# NTM

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  INSTRUCTIONS.md  README.md  SKILLS.md  TESTING.md  TOOLS.md  alembic.ini  check_campaigns.py  conftest.py  docker-compose.yml  docker-entrypoint.sh  ntm-sessions.ps1  pyproject.toml  pytest.ini  render.yaml  requirements.txt  routers-campaign-fix.txt  run_backend.bat  run_concept.py  run_worker.bat  setup-generic-ntm.ps1  setup-project-ntm.ps1
.claude/skills/: agent-stub.md  audit-module.md  task-create.md  tool-stub.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_cities_to_mandates.py
backend/: Dockerfile
backend/app/: celery_app.py  db.py  main.py
backend/tests/: test_main.py
docs/: TASK-005-agt02-api-reference.md  analytics-agent-guide.md  prd-audit-report.md
docs/golden/: mandate_1_ci_report.json  mandate_1_concept.json  mandate_2_ci_report.json  mandate_2_concept.json  mandate_3_ci_report.json  mandate_3_concept.json
frontend/: nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
tasks/: TASK-000-repo-init.md  TASK-013-agt08-scriptwriter.md  TASK-014-agt09-image-generator.md  TASK-015-agt10-audio-generator.md  TASK-016-agt11-video-generator.md
tests/agents/: conftest.py  conftest_creative_director.py  test_budget_optimizer.py  test_campaign_strategist.py  test_creative_director_fixtures.py  test_creative_director_models.py  test_generator.py  (+5 more)
(+430 files in other folders)
