[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ntm"
version = "0.1.0"
description = "NTM — AI-native campaign management platform"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }
authors = [
  { name = "NTM Engineering", email = "eng@ntm.io" }
]
dependencies = [
  "fastapi==0.129.0",
  "uvicorn[standard]==0.41.0",
  "python-multipart==0.0.27",
  "fastapi-users[sqlalchemy]==15.0.5",
  "fastapi-users-db-sqlalchemy==7.0.0",
  "email-validator==2.3.0",
  "passlib==1.7.4",
  "bcrypt==5.0.0",
  "cryptography==48.0.0",
  "PyJWT==2.12.1",
  "python-jose[cryptography]==3.5.0",
  "pydantic==2.11.7",
  "pydantic-settings==2.14.0",
  "SQLAlchemy[asyncio]==2.0.49",
  "asyncpg==0.30.0",
  "alembic==1.18.4",
  "motor==3.7.1",
  "pymongo==4.17.0",
  "redis==5.2.1",
  "celery[redis]==5.6.3",
  "kombu==5.6.2",
  "anthropic==0.100.0",
  "openai==1.82.0",
  "langchain>=0.2.0,<0.4.0",
  "langchain-anthropic>=0.1.0,<0.4.0",
  "python-dotenv==1.1.1",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "pytest-cov==7.1.0",
  "aiosqlite==0.22.1",
  "httpx==0.28.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend"]
asyncio_mode = "auto"
addopts = "--tb=short -q"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["backend"]
